Fix build issue